<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_main_time"

    android:orientation="vertical"
    android:padding="@dimen/padding14"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/padding2"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size22"
            style="@style/MainTextStyle"
            />
    </FrameLayout>
    <Button
        android:id="@+id/button_search"
        style="@style/ButtonMenu"
        android:layout_marginTop="@dimen/padding24"
        android:text="@string/search"
        app:icon="@drawable/ic_vector"
        />
    <Button
        android:id="@+id/button_media"
        style="@style/ButtonMenu"
        android:text="@string/media"
        app:icon="@drawable/ic_media"
        />
    <Button
        android:id="@+id/button_settings"
        style="@style/ButtonMenu"
        android:text="@string/settings"
        app:icon="@drawable/ic_sitting"
        />
</LinearLayout>
