<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/time"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding56"
            android:orientation="horizontal"
            android:padding="@dimen/padding4">

            <ImageView
                android:id="@+id/button_back"
                android:layout_margin="12dp"
                style="@style/SettingsButtonViewArrowMode" />

            <TextView
                style="@style/SettingsMenuTextMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/padding12"
                android:layout_marginTop="@dimen/padding10"
                android:layout_marginBottom="@dimen/padding12"
                android:gravity="end"
                android:text="@string/search"
                android:textSize="@dimen/text_size22" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding8">


            <EditText
                android:id="@+id/input_editText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding36"
                android:hint="@string/search"
                android:background="@drawable/search_input"
                android:inputType="text"
                android:paddingStart="@dimen/padding36"
                android:paddingEnd="@dimen/padding36"
                android:textColor="@color/black"
                android:textColorHint="@color/hintcolor"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="@dimen/padding16"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:windowSoftInputMode="stateHidden"
                />

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="@dimen/padding12"
                app:tint="@color/search_icon"
                android:src="@drawable/search_button" />

            <ImageView
                android:id="@+id/clear_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/padding8"
                app:tint="@color/search_icon"
                android:padding="@dimen/padding8"
                android:src="@drawable/exit_button"
                />
        </FrameLayout>
        <LinearLayout
            android:id="@+id/historyMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:id="@+id/history"
                style="@style/ErrTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding42"
                android:layout_marginBottom="@dimen/padding20"
                android:gravity="end"
                android:text="@string/searh_history"
                android:textSize="@dimen/text_size22" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/clear_history_button"
                style="@style/MainTextStyle"
                android:text="@string/clear_history"
                android:backgroundTint="@color/search_err_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding24"
                android:textColor="@color/update"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/padding54"
                />


        </LinearLayout>




        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding16"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/track_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
            <LinearLayout
                android:id="@+id/placeholder_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                >

                <ImageView
                    android:id="@+id/message_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/padding86"
                    android:src="@drawable/error_search" />

                <TextView
                android:id="@+id/message_text"
                style="@style/ErrTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/padding24"
                android:layout_marginTop="@dimen/padding16"
                android:layout_marginEnd="@dimen/padding24"
                android:textAlignment="center"
                tools:text="Ошибка Ошибdssssssssssssssssssssssssssdwddwdwwddddddwddd " />
                <Button
                    style="@style/MainTextStyle"
                    android:id="@+id/update_button"
                    android:backgroundTint="@color/search_err_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/padding24"
                    android:text="@string/update"
                    android:textColor="@color/update"
                    android:textAllCaps="false"
                    app:cornerRadius="@dimen/padding54"
                    />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
